tests/conc/reject/chan_arr.hi
fn main():
    ch := channel(int, 4)
    cs := [ch]
    close(ch)
